UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Phoenix_Product_Playbook__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Upload_Number__c</fullName>
        <label>Batch Upload Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_1st_API_Mfg_Site_DMF_Number__c</fullName>
        <label>1st API Mfg Site DMF Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_1st_API_Mfg_Site_DUNS_Number__c</fullName>
        <label>1st API Mfg Site DUNS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_1st_API_Mfg_Site_FEI_Number__c</fullName>
        <label>1st API Mfg Site FEI Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_1st_Active_Ingr_Producer_City__c</fullName>
        <label>1st Active Ingr Producer Add-  City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_1st_Active_Ingr_Producer_Country__c</fullName>
        <label>1st Active Ingr Producer Add- Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Phoenix_Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_1st_Active_Ingr_Producer_State__c</fullName>
        <label>1st Active Ingr Producer Add-  State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_1st_Active_Ingr_Unit_of_Measure__c</fullName>
        <label>1st Active Ingredient Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>g</fullName>
                </value>
                <value>
                    <fullName>gm</fullName>
                </value>
                <value>
                    <fullName>gms</fullName>
                </value>
                <value>
                    <fullName>kg</fullName>
                </value>
                <value>
                    <fullName>mcg</fullName>
                </value>
                <value>
                    <fullName>mcg/ml</fullName>
                </value>
                <value>
                    <fullName>mg</fullName>
                </value>
                <value>
                    <fullName>mg/ml</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_1st_Active_Ingredient_Drug__c</fullName>
        <label>1st Active Ingredient Drug Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_1st_Active_Ingredient_Producer__c</fullName>
        <label>1st Active Ingredient Producer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_2nd_API_Mfg_site_Add_Country__c</fullName>
        <label>2nd API Mfg site Add- Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Phoenix_Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_2nd_API_Mfg_site_Add_Postal_Code__c</fullName>
        <label>2nd API Mfg site Add- Postal Code</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_2nd_API_Mfg_site_City__c</fullName>
        <label>2nd API Mfg site Add- City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_2nd_API_Mfg_site_State__c</fullName>
        <label>2nd API Mfg site Add- State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_2nd_API_Mfg_site_Street__c</fullName>
        <label>2nd API Mfg site Add- Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_2nd_Active_Ingredient_Drug__c</fullName>
        <label>2nd Active Ingredient Drug Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_2nd_Active_Ingredient_Percentage__c</fullName>
        <label>2nd Active Ingredient Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_3rd_API_Mfg_Site_Add_Country__c</fullName>
        <label>3rd API Mfg Site Add- Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Phoenix_Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_3rd_API_Mfg_Site_City__c</fullName>
        <label>3rd API Mfg Site Add- City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_3rd_API_Mfg_Site_State__c</fullName>
        <label>3rd API Mfg Site Add- State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_3rd_API_Mfg_Site_Street__c</fullName>
        <label>3rd API Mfg Site Add- Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_3rd_API_Mfg_site_Add_Postal_Code__c</fullName>
        <label>3rd API Mfg site Add- Postal Code</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_3rd_Active_Ingr_Drug_Name__c</fullName>
        <label>3rd Active Ingredient Drug Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_3rd_Active_Ingr_Number_Strength__c</fullName>
        <label>3rd Active Ingredient Numerator Strength</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_3rd_Active_Ingr_Unit_of_Measure__c</fullName>
        <label>3rd Active Ingredient Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>g</fullName>
                </value>
                <value>
                    <fullName>gm</fullName>
                </value>
                <value>
                    <fullName>gms</fullName>
                </value>
                <value>
                    <fullName>kg</fullName>
                </value>
                <value>
                    <fullName>mcg</fullName>
                </value>
                <value>
                    <fullName>mcg/ml</fullName>
                </value>
                <value>
                    <fullName>mg</fullName>
                </value>
                <value>
                    <fullName>mg/ml</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_3rd_Active_Ingredient_Percentage__c</fullName>
        <label>3rd Active Ingredient Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_API2_Mfg_Site_DMF_Number__c</fullName>
        <label>2nd API Mfg Site DMF Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_API2_Mfg_Site_DUNS_Number__c</fullName>
        <label>2nd API Mfg Site DUNS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_API2_Mfg_Site_FEI_Number__c</fullName>
        <label>2nd API Mfg Site FEI Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_API3_Mfg_Site_DMF_Number__c</fullName>
        <label>3rd API Mfg Site DMF Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_API3_Mfg_Site_DUNS_Number__c</fullName>
        <label>3rd API Mfg Site DUNS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_API3_Mfg_Site_FEI_Number__c</fullName>
        <label>3rd API Mfg Site FEI Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Active_Discontinue__c</fullName>
        <label>Active / Discontinue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Bulk - Active</fullName>
                </value>
                <value>
                    <fullName>Discontinue</fullName>
                </value>
                <value>
                    <fullName>Discontinued - API Source</fullName>
                </value>
                <value>
                    <fullName>Not Active</fullName>
                </value>
                <value>
                    <fullName>Not Launched</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Active_Ingr_Numerator_Strength2__c</fullName>
        <label>2nd Active Ingredient Numerator Strength</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Active_Ingr_Numerator_Strength__c</fullName>
        <label>1st Active Ingredient Numerator Strength</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Active_Ingr_Producer_Postal_Code__c</fullName>
        <inlineHelpText>1st Active Ingredient Producer Add- Postal Code  </inlineHelpText>
        <label>Active Ingr Producer Add- Postal Code</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Active_Ingr_Unit_of_Measure2__c</fullName>
        <label>2nd Active Ingredient Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>g</fullName>
                </value>
                <value>
                    <fullName>gm</fullName>
                </value>
                <value>
                    <fullName>gms</fullName>
                </value>
                <value>
                    <fullName>kg</fullName>
                </value>
                <value>
                    <fullName>mcg</fullName>
                </value>
                <value>
                    <fullName>mcg/ml</fullName>
                </value>
                <value>
                    <fullName>mg</fullName>
                </value>
                <value>
                    <fullName>mg/ml</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Batch_Upload_Number__c</fullName>
        <label>Batch Upload Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_CBP_MID__c</fullName>
        <inlineHelpText>CBP Manufacturer Identification Number (MID)</inlineHelpText>
        <label>CBP MID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_City_of_Finished_Good_MFR__c</fullName>
        <inlineHelpText>City of Finished Good Manufacturer</inlineHelpText>
        <label>Finished Good Manufacturer Add- City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Controlled_Substance1__c</fullName>
        <description>This field is used for Reporting purpose only.</description>
        <formula>IF( Phoenix_Controlled_Substance__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Controlled Substance (Yes  / No)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Controlled_Substance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Controlled Substance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_DA__c</fullName>
        <inlineHelpText>&quot;DA&quot; formerly known as NDA  - New Drug Application 
 ANDA Abbreviated New Drug Application 
(Affirmation of Compliance Code)</inlineHelpText>
        <label>DA (Drug Application)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_DLS_formerly_NDC__c</fullName>
        <inlineHelpText>formerly NDC-11</inlineHelpText>
        <label>DLS (formerly NDC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_DTP_Add_Postal_Code__c</fullName>
        <label>Deliver to Parties Add- Postal Code</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_DTP_Email__c</fullName>
        <label>Deliver to Parties Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phoenix_DTP_Telephone_Number__c</fullName>
        <label>Deliver to Parties Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phoenix_DUNS_of_Finished_Good_Mfg__c</fullName>
        <label>DUNS of Finished Good Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Deliver_to_Parties_Add_Country__c</fullName>
        <label>Deliver to Parties Add- Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Phoenix_Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Deliver_to_Parties_City__c</fullName>
        <label>Deliver to Parties Add- City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Deliver_to_Parties_Contact_Party__c</fullName>
        <label>Deliver to Parties Contact Party</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Deliver_to_Parties_Name__c</fullName>
        <label>Deliver to Parties Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Deliver_to_Parties_State__c</fullName>
        <label>Deliver to Parties Add- State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Deliver_to_Parties_Street__c</fullName>
        <label>Deliver to Parties Add- Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Dosage_Form__c</fullName>
        <label>Dosage Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bags</fullName>
                </value>
                <value>
                    <fullName>Bliter</fullName>
                </value>
                <value>
                    <fullName>Bottle</fullName>
                </value>
                <value>
                    <fullName>Capsules</fullName>
                </value>
                <value>
                    <fullName>Cream</fullName>
                </value>
                <value>
                    <fullName>Emulsion</fullName>
                </value>
                <value>
                    <fullName>Granules</fullName>
                </value>
                <value>
                    <fullName>Injectable</fullName>
                </value>
                <value>
                    <fullName>Oral Suspension</fullName>
                </value>
                <value>
                    <fullName>Patch,</fullName>
                </value>
                <value>
                    <fullName>Powder</fullName>
                </value>
                <value>
                    <fullName>Pump</fullName>
                </value>
                <value>
                    <fullName>Respulse</fullName>
                </value>
                <value>
                    <fullName>Solution / Ampulse</fullName>
                </value>
                <value>
                    <fullName>Sublingual Film</fullName>
                </value>
                <value>
                    <fullName>Suspensions /  Drop</fullName>
                </value>
                <value>
                    <fullName>Tablets</fullName>
                </value>
                <value>
                    <fullName>Vial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Drug_Intended_Use_Code__c</fullName>
        <label>Drug Intended Use Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_FDA_Processing_Code__c</fullName>
        <label>FDA Processing Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_FDA_Product_Code__c</fullName>
        <label>FDA Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_FDA_Program_Code__c</fullName>
        <label>FDA Program Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_FEI_of_Finished_Good_Mfg__c</fullName>
        <label>FEI of Finished Good Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Finished_Good_MFR_Add_Country__c</fullName>
        <label>Finished Good Manufacturer Add- Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Phoenix_Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Finished_Good_MFR_Name__c</fullName>
        <label>Finished Good Manufacturer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Finished_Good_Mfr_Postal_Code__c</fullName>
        <inlineHelpText>Finished Good Manufacturer Add- Postal Code</inlineHelpText>
        <label>Finished Good Mfr Add- Postal Code</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_HDE__c</fullName>
        <inlineHelpText>&quot;HDE&quot; Humanitarian Device Exemption (Affirmation of Compliance Code)</inlineHelpText>
        <label>HDE (Humanitarian Device Exemption)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_HTS_Number__c</fullName>
        <label>HTS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_IND__c</fullName>
        <inlineHelpText>&quot;IND&quot; Investigative New Drug Number (Affirmation of Compliance Code)</inlineHelpText>
        <label>IND (Investigative New Drug)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Imported_or_Domestic__c</fullName>
        <label>Imported or Domestic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>Imported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Importer_s_Add_Country__c</fullName>
        <label>Importer&apos;s Add- Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Phoenix_Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Importer_s_Add_Postal_Code__c</fullName>
        <label>Importer&apos;s Add- Postal Code</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Importer_s_City__c</fullName>
        <label>Importer&apos;s Add- City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Importer_s_Contact_Party__c</fullName>
        <label>Importer&apos;s Contact Party  </label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Importer_s_State__c</fullName>
        <label>Importer&apos;s Add- State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Importer_s_Street__c</fullName>
        <label>Importer&apos;s Add- Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Importers_Name__c</fullName>
        <label>Importer&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Importers_Telephone_Number__c</fullName>
        <label>Importer&apos;s Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phoenix_Importers_email_address__c</fullName>
        <label>Importer&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phoenix_IsActive__c</fullName>
        <formula>Phoenix_Product__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Name_of_Shipper_to_UPS__c</fullName>
        <label>Shipper to UPS Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_PMA__c</fullName>
        <inlineHelpText>PMA (Device Premarket Number) formerly known as Device Pre-Market Application  (Affirmation of Compliance Code)</inlineHelpText>
        <label>PMA (Pre-Market Application)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Pack_Size__c</fullName>
        <formula>Phoenix_Product__r.Phoenix_SAP_Pack_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pack Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Percentage_of_Active_Ingredient__c</fullName>
        <label>1st Active Ingredient Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Description__c</fullName>
        <formula>Phoenix_Product__r.Phoenix_SAP_Product_Name__c</formula>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Playbooks</relationshipLabel>
        <relationshipName>Product_Playbooks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proprietary_Name__c</fullName>
        <label>Proprietary Name / Trade Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Refrigerated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refrigerated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Related_Parites1__c</fullName>
        <description>This field is for Reporting purpose only.</description>
        <formula>IF( Phoenix_Related_Parties__c , &apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>Related  Parites (Yes / No)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Related_Parties__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Related Parties</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Material__c</fullName>
        <formula>Phoenix_Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Material</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Shelf_Life__c</fullName>
        <label>Shelf Life</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Shipper_to_UPS_Add_Country__c</fullName>
        <label>Shipper to UPS Add- Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Phoenix_Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Shipper_to_UPS_Add_Postal_Code__c</fullName>
        <label>Shipper to UPS Add- Postal Code </label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Shipper_to_UPS_City__c</fullName>
        <label>Shipper to UPS Add- City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Shipper_to_UPS_State__c</fullName>
        <label>Shipper to UPS Add- State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Shipper_to_UPS_Street__c</fullName>
        <label>Shipper to UPS Add- Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_State_of_Finished_Good_MFR__c</fullName>
        <label>Finished Good Manufacturer Add- State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Street_of_Finished_Good_MFR__c</fullName>
        <inlineHelpText>Street of Finished Good Manufacturer</inlineHelpText>
        <label>Finished Good Manufacturer Add- Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_USDA_Permit_Number__c</fullName>
        <label>USDA Permit Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_USDA_Permit_Required1__c</fullName>
        <description>This field is used for Reporting purpose only.</description>
        <formula>IF( Phoenix_USDA_Permit_Required__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>USDA Permit Required (Yes / No)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_USDA_Permit_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>USDA Permit Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pnoenix_1st_Active_Ingr_Producer_Street__c</fullName>
        <label>1st Active Ingr Producer Add- Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Playbook</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Product__c</columns>
        <columns>Phoenix_Product_Description__c</columns>
        <columns>Phoenix_Imported_or_Domestic__c</columns>
        <columns>Phoenix_HTS_Number__c</columns>
        <columns>Phoenix_FDA_Program_Code__c</columns>
        <columns>Phoenix_FDA_Product_Code__c</columns>
        <columns>Phoenix_Proprietary_Name__c</columns>
        <columns>Phoenix_IsActive__c</columns>
        <columns>Phoenix_Dosage_Form__c</columns>
        <columns>Phoenix_FEI_of_Finished_Good_Mfg__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Product Playbooks</label>
    </listViews>
    <nameField>
        <displayFormat>PB-{000000}</displayFormat>
        <label>Product Playbook Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Playbooks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>